--- a/.github/workflows/main_aid-dermatilogy.yml
+++ b/.github/workflows/main_aid-dermatilogy.yml
@@ -34,12 +34,11 @@ jobs:
         run: |
           cd endpoints
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r endpoints/requirements.txt
 
       - name: Collect static files
       - run: |
-          cd endpoints
-          python manage.py collectstatic --noinput
+          python endpoints/manage.py collectstatic --noinput
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
