--- a/endpoints/requirements.txt
+++ b/endpoints/requirements.txt
@@ -12,7 +12,6 @@ azure-common==1.1.28
 azure-core==1.32.0
 azure-search-documents==11.5.2
 certifi==2025.1.31
-channels==4.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 comm==0.2.2
@@ -20,20 +19,16 @@ contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.13
-decorator==5.2.1
 distro==1.9.0
 Django==5.1.7
 django-cors-headers==4.7.0
 django-rest-passwordreset==1.5.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
-drfasyncview==0.2.3
 executing==2.2.0
 flatbuffers==25.2.10
-fonttools==4.56.0
 frozenlist==1.5.0
 gast==0.6.0
-google-pasta==0.2.0
 greenlet==3.1.1
 grpcio==1.70.0
 h11==0.14.0
@@ -50,7 +45,6 @@ jedi==0.19.2
 jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==3.9.0
 kiwisolver==1.4.8
@@ -66,7 +60,6 @@ Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
-matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.4.1
@@ -81,7 +74,6 @@ opt_einsum==3.4.0
 optree==0.14.1
 orjson==3.10.15
 packaging==24.2
-pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
@@ -93,9 +85,8 @@ psutil==7.0.0
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pydantic==2.10.6
-pydantic-settings==2.8.1
-pydantic_core==2.27.2
+pydantic==2.11.1
+pydantic_core==2.33.0
 Pygments==2.19.1
 PyJWT==2.9.0
 pyparsing==3.2.1
@@ -124,10 +115,10 @@ tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 typing-inspect==0.9.0
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
-uvicorn==0.34.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 whitenoise==6.9.0
