--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ fastjsonschema==2.21.1
 flatbuffers==25.2.10
 frozenlist==1.5.0
 gast==0.6.0
+google-pasta==0.2.0
 greenlet==3.1.1
 grpcio==1.70.0
 h11==0.14.0
@@ -104,6 +105,7 @@ psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pydantic==2.11.1
+pydantic-settings==2.8.1
 pydantic_core==2.33.0
 Pygments==2.19.1
 PyJWT==2.9.0
@@ -122,6 +124,7 @@ rpds-py==0.24.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.40
 sqlparse==0.5.3
 stack-data==0.6.3
 tenacity==9.0.0
