--- a/.github/workflows/main_aid-dermatilogy.yml
+++ b/.github/workflows/main_aid-dermatilogy.yml
@@ -31,13 +31,14 @@ jobs:
 
       - name: Install dependencies
         run: |
+          source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Collect static files
         run: |
-          cd endpoints
-          python manage.py collectstatic --noinput
+          source venv/bin/activate
+          python endpoints/manage.py collectstatic --noinput
 
       - name: Zip artifact for deployment
         run: |
