--- a/.github/workflows/main_aid-dermatilogy.yml
+++ b/.github/workflows/main_aid-dermatilogy.yml
@@ -28,18 +28,19 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
       - name: Install dependencies
         run: |
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-
+      - name: Collect static files
+        run: |
+          source venv/bin/activate
+          python endpoints/manage.py collectstatic --noinput
       - name: Zip artifact for deployment
         run: |
           cd endpoints
           zip release.zip ./* -r
-
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
@@ -47,7 +48,6 @@ jobs:
           path: |
             endpoints/release.zip
             !venv/
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
