--- a/.github/workflows/main_aid-dermatilogy.yml
+++ b/.github/workflows/main_aid-dermatilogy.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           source venv/bin/activate
+          cd endpoints
           pip install --upgrade pip
           pip install -r requirements.txt
       - name: Collect static files
