--- a/endpoints/requirements.txt
+++ b/endpoints/requirements.txt
@@ -2,7 +2,7 @@ asn1crypto==1.5.1
 autocommand==2.2.2
 bcrypt==4.2.0
 blinker==1.9.0
-Brlapi==0.8.6
+Brlapi
 certifi==2025.1.31
 chardet==5.2.0
 charset-normalizer==3.4.1
