--- a/.github/workflows/main_aid-dermatilogy.yml
+++ b/.github/workflows/main_aid-dermatilogy.yml
@@ -28,52 +28,27 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
       - name: Install dependencies
-        env:
-          AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
-          AZURE_OPENAI_API_ENDPOINT: ${{ secrets.AZURE_OPENAI_API_ENDPOINT }}
-          AZURE_AI_SEARCH_KEY: ${{ secrets.AZURE_AI_SEARCH_KEY}}
-          AZURE_AI_SEARCH_ENDPOINT: ${{ secrets.AZURE_AI_SEARCH_ENDPOINT}}
         run: |
           source venv/bin/activate
           pip install --upgrade pip
           cd endpoints
           pip install -r requirements.txt
-
-      - name: Run migrations in build (validation)
-        run: |
-          source venv/bin/activate
-          cd endpoints
-          python manage.py migrate --noinput
-
       - name: Collect static files
         run: |
           source venv/bin/activate
-          cd endpoints
-          python manage.py collectstatic --noinput
-
-      - name: Prepare deployment files
+          python endpoints/manage.py collectstatic --noinput
+      - name: Zip artifact for deployment
         run: |
-          # Create startup script at root
-          echo '#!/bin/bash' > startup.sh
-          echo 'cd /home/site/wwwroot' >> startup.sh
-          echo 'pip install -r requirements.txt' >> startup.sh
-          echo 'python manage.py migrate --noinput' >> startup.sh
-          echo 'gunicorn --bind=0.0.0.0 --timeout 600 endpoints.wsgi' >> startup.sh
-          chmod +x startup.sh
-
-          # Move all files to deployment directory
-          mkdir -p deployment
-          cp -r endpoints/* deployment/
-          cp startup.sh deployment/
-
-      - name: Upload artifact for deployment
+          cd endpoints
+          zip release.zip ./* -r
+      - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: deployment/
-
+          path: |
+            endpoints/release.zip
+            !venv/
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -86,7 +61,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: python-app
-          path: .
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
       - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
