--- a/.github/workflows/main_aid-dermatilogy.yml
+++ b/.github/workflows/main_aid-dermatilogy.yml
@@ -38,25 +38,17 @@ jobs:
         run: |
           source venv/bin/activate
           python endpoints/manage.py collectstatic --noinput
-      - name: Generate deployment package
+      - name: Zip artifact for deployment
         run: |
-          # Create a .sh file that will run migrations on startup
-          echo '#!/bin/bash' > startup.sh
-          echo 'pip install -r requirements.txt' >> startup.sh
-          echo 'python manage.py migrate --noinput' >> startup.sh
-          echo 'gunicorn --bind=0.0.0.0 --timeout 600 endpoints.wsgi' >> startup.sh
-          chmod +x startup.sh
-
           cd endpoints
-          zip -r ../release.zip ./*
-          cd ..
-          zip -ur release.zip startup.sh
-
+          zip release.zip ./* -r
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: release.zip
+          path: |
+            endpoints/release.zip
+            !venv/
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -80,4 +72,3 @@ jobs:
           app-name: "aid-dermatilogy"
           slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_68C025B29C09438CB9C20318E1CD582B }}
-          package: .
