--- a/endpoints/requirements.txt
+++ b/endpoints/requirements.txt
@@ -25,6 +25,7 @@ debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
 distro==1.9.0
+dj-database-url==2.3.0
 Django==5.1.7
 django-colorfield==0.12.0
 django-cors-headers==4.7.0
@@ -40,6 +41,7 @@ gast==0.6.0
 google-pasta==0.2.0
 greenlet==3.1.1
 grpcio==1.70.0
+gunicorn==23.0.0
 h11==0.14.0
 h5py==3.13.0
 httpcore==1.0.7
