--- a/endpoints/requirements.txt
+++ b/endpoints/requirements.txt
@@ -18,6 +18,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 comm==0.2.2
+confluent-kafka==2.10.0
 contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
