--- a/endpoints/requirements.txt
+++ b/endpoints/requirements.txt
@@ -17,6 +17,8 @@ bleach==6.2.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.2
 confluent-kafka==2.10.0
 contourpy==1.3.1
@@ -34,9 +36,11 @@ django-rest-passwordreset==1.5.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 docopt==0.6.2
+et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 flatbuffers==25.2.10
+fonttools==4.57.0
 frozenlist==1.5.0
 gast==0.6.0
 google-pasta==0.2.0
@@ -83,24 +87,29 @@ ml-dtypes==0.4.1
 multidict==6.1.0
 mypy-extensions==1.0.0
 namex==0.0.8
+narwhals==1.36.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.0.2
 openai==1.65.4
+opencv-python==4.11.0.86
+openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.14.1
 orjson==3.10.15
 packaging==24.2
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==1.0.1
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==11.1.0
 pip-check==2.9
 pipreqs==0.5.0
 platformdirs==4.3.6
+plotly==6.0.1
 prompt_toolkit==3.0.50
 propcache==0.3.0
 protobuf==5.29.3
@@ -113,7 +122,9 @@ pydantic-settings==2.8.1
 pydantic_core==2.33.0
 Pygments==2.19.1
 PyJWT==2.9.0
+pyogrio==0.10.0
 pyparsing==3.2.1
+pyproj==3.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
@@ -126,11 +137,14 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.24.0
+scipy==1.15.2
+shapely==2.1.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 sqlparse==0.5.3
 stack-data==0.6.3
+statsmodels==0.14.4
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
